# robot

./: .travis.yml  CMakeLists.txt  README.md
include/: dual.h  dual.hpp  dual.tpp  frame.hpp  ik.hpp  joint.hpp  norm.hpp  quaternion.h  quaternion.hpp  serial.hpp  transform.h  transform.hpp  typedefs.h  typedefs.hpp  utilities.h  utilities.hpp  vector.h  vector.hpp
include/spatial/: dual.tpp  quaternion.hpp  triangle.hpp  vector.tpp
include/utils/: logger.hpp  timer.hpp
include/visual/file_types/stl/: stl_parser.hpp
src/: dual.cpp  frame.cpp  ik.cpp  joint.cpp  main.cpp  norm.cpp  quaternion.cpp  serial.cpp  transform.cpp  utilities.cpp
src/spatial/: dual.cpp  quaternion.cpp  transform.cpp
src/utils/: logger.cpp  timer.cpp
src/visual/file_types/stl/: stl_parser.cpp
test/: CMakeLists.txt  dual.cpp  frame.cpp  ik.cpp  joint.cpp  main.cpp  quaternion.cpp  transform.cpp  utilities.cpp  vector.cpp
test/ik/: angles.cpp  arm.cpp  elbow.cpp  shoulder.cpp  waist.cpp
test/matchers/: angles.hpp  array.hpp  frame.hpp  vector.hpp
test/robots/: abb_irb_120.hpp
